--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.1",
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.552.0",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
