--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.6.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.11",
     "sqlite3": "^5.1.7",
     "streamifier": "^0.1.1",
     "xlsx": "^0.18.5"
